--- a/server/src/main/resources/application-prod.properties
+++ b/server/src/main/resources/application-prod.properties
@@ -1,1 +1,4 @@
 logging.file.name=${catalina.base}/logs/finance-manager/app.log
+logging.logback.rollingpolicy.file-name-pattern=${catalina.base}/logs/finance-manager/app.%d{yyyy-MM-dd}.%i.log
+
+import-data.directory=/root/files/finance-manager
