Changed import data directory

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -6,4 +6,4 @@ spring.data.mongodb.database=finance-manager
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 
-import-data.directory=./files
+import-data.directory=/mnt/files
