--- a/web/package.json
+++ b/web/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^14.1.0",
     "@angular/service-worker": "^14.1.0",
     "class-transformer": "^0.5.1",
+    "file-saver": "^2.0.5",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
@@ -30,6 +31,7 @@
     "@angular-devkit/build-angular": "^14.1.3",
     "@angular/cli": "~14.1.3",
     "@angular/compiler-cli": "^14.1.0",
+    "@types/file-saver": "^2.0.5",
     "typescript": "~4.7.2"
   }
 }
