--- a/web/package.json
+++ b/web/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^14.1.0",
     "@angular/service-worker": "^14.1.0",
     "class-transformer": "^0.5.1",
+    "echarts": "^5.4.0",
     "file-saver": "^2.0.5",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
