--- a/web/package.json
+++ b/web/package.json
@@ -21,9 +21,11 @@
     "@angular/platform-browser-dynamic": "^14.1.0",
     "@angular/router": "^14.1.0",
     "@angular/service-worker": "^14.1.0",
+    "@cryptofonts/cryptofont": "^1.3.5",
     "class-transformer": "^0.5.1",
     "echarts": "^5.4.0",
     "file-saver": "^2.0.5",
+    "flag-icons": "^6.6.6",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
