--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -2,9 +2,9 @@ spring.profiles.active=dev
 
 spring.servlet.multipart.max-file-size=10MB
 
-spring.datasource.url=jdbc:mysql://localhost:3306/finance-manager?serverTimezone=UTC&replicaSet=rs0
+spring.datasource.url=jdbc:mysql://localhost:3306/finance-manager-dev?serverTimezone=UTC&replicaSet=rs0
 #spring.data.mongodb.authentication-database=admin
-spring.data.mongodb.database=finance-manager
+spring.data.mongodb.database=finance-manager-dev
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 
