Implemented exchange providers

--- a/server/src/main/resources/application-prod.properties
+++ b/server/src/main/resources/application-prod.properties
@@ -2,3 +2,6 @@ logging.file.name=${catalina.base}/logs/finance-manager/app.log
 logging.logback.rollingpolicy.file-name-pattern=${catalina.base}/logs/finance-manager/app.%d{yyyy-MM-dd}.%i.log
 
 import-data.directory=/var/tmp/finance-manager
+
+exchange.fixerio.apikey=axbUmMkKTHOfnypeVnI6nMHZUYCBn5cW
+exchange.currency_date.apikey=axbUmMkKTHOfnypeVnI6nMHZUYCBn5cW
