--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -9,3 +9,6 @@ spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 
 import-data.directory=./files
+
+exchange.fixerio.apikey=axbUmMkKTHOfnypeVnI6nMHZUYCBn5cW
+exchange.currency_date.apikey=axbUmMkKTHOfnypeVnI6nMHZUYCBn5cW
