--- a/server/src/main/resources/application-prod.properties
+++ b/server/src/main/resources/application-prod.properties
@@ -3,5 +3,4 @@ logging.logback.rollingpolicy.file-name-pattern=${catalina.base}/logs/finance-ma
 
 import-data.directory=/var/tmp/finance-manager
 
-exchange.fixerio.apikey=axbUmMkKTHOfnypeVnI6nMHZUYCBn5cW
-exchange.currency_date.apikey=axbUmMkKTHOfnypeVnI6nMHZUYCBn5cW
+exchange.apilayer.apikey=axbUmMkKTHOfnypeVnI6nMHZUYCBn5cW
