--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -10,5 +10,4 @@ spring.data.mongodb.port=27017
 
 import-data.directory=./files
 
-exchange.fixerio.apikey=axbUmMkKTHOfnypeVnI6nMHZUYCBn5cW
-exchange.currency_date.apikey=axbUmMkKTHOfnypeVnI6nMHZUYCBn5cW
+exchange.apilayer.apikey=axbUmMkKTHOfnypeVnI6nMHZUYCBn5cW
