--- a/server/src/main/resources/application-prod.properties
+++ b/server/src/main/resources/application-prod.properties
@@ -1,1 +1,5 @@
 logging.file.name=./logs/app.log
+
+spring.datasource.url=jdbc:postgresql://${DB_HOST}/finance-manager
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
