--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -17,7 +17,7 @@ jobs:
     runs-on: ubuntu-latest
     environment: ${{ github.ref_name }}
     steps:
-      - name: Checkout
+      - name: Checkout-
         uses: actions/checkout@v3
       - name: Setup Java
         uses: actions/setup-java@v3
