--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       DB_HOST: localhost:5432
       DB_USER: root_user
       DB_PASSWORD: root_password
+      EXCHANGE_API_KEY: exchange_api_key
 
   web:
     image: joltd/finance-manager:web-2.0.0-SNAPSHOT
