--- a/server/src/main/resources/application-prod.properties
+++ b/server/src/main/resources/application-prod.properties
@@ -1,3 +1,5 @@
 spring.datasource.url=jdbc:postgresql://${DB_HOST}/finance-manager
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
+
+exchange.apilayer.apikey=${EXCHANGE_API_KEY}
