--- a/web/package.json
+++ b/web/package.json
@@ -34,6 +34,6 @@
     "@angular/cli": "~16.2.11",
     "@angular/compiler-cli": "^16.2.12",
     "@types/file-saver": "^2.0.5",
-    "typescript": "~4.9.3"
+    "typescript": "^5.3.3"
   }
 }
