Improvements for exchange rate logic

--- a/server/src/main/resources/application-prod.properties
+++ b/server/src/main/resources/application-prod.properties
@@ -2,4 +2,7 @@ spring.datasource.url=jdbc:postgresql://${DB_HOST}/finance-manager
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
 
-exchange.apilayer.apikey=${EXCHANGE_API_KEY}
+exchange.free-currency.api-key=${FREE_CURRENCY_API_KEY}
+exchange.open-exchange.app-id=${OPEN_EXCHANGE_APP_ID}
+exchange.exchange-rate.api-key=${EXCHANGE_RATE_API_KEY}
+exchange.coin-gecko.api-key=${COIN_GECKO_API_KEY}
