--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -66,7 +66,10 @@ jobs:
           -e 's/localhost:5432/${{ secrets.DB_HOST }}/' \
           -e 's/root_user/${{ secrets.DB_USER }}/' \
           -e 's/root_password/${{ secrets.DB_PASSWORD }}/' \
-          -e 's/exchange_api_key/${{ secrets.EXCHANGE_API_KEY }}/' \
+          -e 's/free_currency_api_key/${{ secrets.FREE_CURRENCY_API_KEY }}/' \
+          -e 's/open_exchange_app_id/${{ secrets.OPEN_EXCHANGE_APP_ID }}/' \
+          -e 's/exchange_rate_api_key/${{ secrets.EXCHANGE_RATE_API_KEY }}/' \
+          -e 's/coin_gecko_api_key/${{ secrets.COIN_GECKO_API_KEY }}/' \
           -i docker-compose.yml
 
       - name: Send Docker Compose file
