--- a/server/src/main/resources/application-prod.properties
+++ b/server/src/main/resources/application-prod.properties
@@ -6,3 +6,5 @@ exchange.free-currency.api-key=${FREE_CURRENCY_API_KEY}
 exchange.open-exchange.app-id=${OPEN_EXCHANGE_APP_ID}
 exchange.exchange-rate.api-key=${EXCHANGE_RATE_API_KEY}
 exchange.coin-gecko.api-key=${COIN_GECKO_API_KEY}
+
+ai.open-ai.api-key=${OPEN_AI_API_KEY}
