--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.profiles.active=dev
 
 spring.servlet.multipart.max-file-size=10MB
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/finance-manager
+spring.datasource.url=jdbc:postgresql://localhost:5432/finance_manager
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
