--- a/web/package.json
+++ b/web/package.json
@@ -29,8 +29,10 @@
     "next": "15.3.1",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
+    "react-day-picker": "^9.7.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.57.0",
+    "remeda": "^2.23.0",
     "tailwind-merge": "^3.2.0",
     "tw-animate-css": "^1.2.8",
     "zod": "^3.25.56",
