--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -9,7 +9,7 @@ on:
 
 env:
   PROJECT_NAME: finance-manager
-  PROJECT_VERSION: 2.0.${{ github.run_number }}
+  PROJECT_VERSION: 3.0.${{ github.run_number }}
 
 jobs:
 
@@ -18,14 +18,14 @@ jobs:
     environment: ${{ github.ref_name }}
     steps:
       - name: Checkout-
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
       - name: Setup Java
         uses: actions/setup-java@v3
         with:
           distribution: 'corretto'
           java-version: '17'
       - name: Setup Node.js
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: 18
           cache: npm
@@ -40,9 +40,9 @@ jobs:
       - name: Build Web
         working-directory: ./web
         run: |
-          npm install -g @angular/cli
-          npm update
-          ng build --base-href /${{ env.PROJECT_NAME }}/
+          npm ci
+          npm run build
+          npm run export
 
       - name: Build Docker images
         run: |
@@ -50,7 +50,7 @@ jobs:
           docker build -t joltd/${{ env.PROJECT_NAME }}:web-${{ env.PROJECT_VERSION }} ./web
 
       - name: Login to Docker Hub
-        uses: docker/login-action@f4ef78c080cd8ba55a85445d5b36e214a81df20a
+        uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
@@ -62,7 +62,7 @@ jobs:
 
       - name: Prepare Docker Compose
         run: |
-          sed -e 's/2.0.0-SNAPSHOT/${{ env.PROJECT_VERSION }}/' \
+          sed -e 's/3.0.0-SNAPSHOT/${{ env.PROJECT_VERSION }}/' \
           -e 's/localhost:5432/${{ secrets.DB_HOST }}/' \
           -e 's/root_user/${{ secrets.DB_USER }}/' \
           -e 's/root_password/${{ secrets.DB_PASSWORD }}/' \
@@ -70,6 +70,7 @@ jobs:
           -e 's/open_exchange_app_id/${{ secrets.OPEN_EXCHANGE_APP_ID }}/' \
           -e 's/exchange_rate_api_key/${{ secrets.EXCHANGE_RATE_API_KEY }}/' \
           -e 's/coin_gecko_api_key/${{ secrets.COIN_GECKO_API_KEY }}/' \
+          -e 's/open_ai_api_key/${{ secrets.OPEN_AI_API_KEY }}/' \
           -i docker-compose.yml
 
       - name: Send Docker Compose file
