--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,8 @@ services:
 
   server:
     image: joltd/finance-manager:server-3.0.0-SNAPSHOT
+    ports:
+      - "9500:8080"
     environment:
       APP_VERSION: 3.0.0-SNAPSHOT
       DB_HOST: localhost:5432
